Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
gst-plugins-bad
gst-plugins-bad
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 994
    • Issues 994
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 192
    • Merge Requests 192
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #1285

Closed
Open
Opened May 02, 2020 by Nazar Mokrynskyi@nazar-pcContributor

rtmp2sink: handle EOS and close connection gracefully

It would be nice for rtmp2sink to handle EOS event and close connection gracefully, ideally with configurable commands that are sent (FCUnpublish, closeStream, deleteStream).

I've tried to hack something together, and it seems to do something useful (commands are being sent), but having no experience with GStreamer plugins development I could use some help with directions, something as simple as link to specific part of the documentation would be useful already.

The most worrying is this in logs so far:

0:00:06.329080082 92351 0x7f3e9c00ef00 ERROR         rtmpconnection rtmpconnection.c:1023:gst_rtmp_connection_send_command:<GstRtmpConnection@0x7f3e84015cd0> Called from wrong thread
0:00:06.329096544 92351 0x7f3e9c00ef00 ERROR         rtmpconnection rtmpconnection.c:1023:gst_rtmp_connection_send_command:<GstRtmpConnection@0x7f3e84015cd0> Called from wrong thread
0:00:06.329107698 92351 0x7f3e9c00ef00 ERROR         rtmpconnection rtmpconnection.c:1023:gst_rtmp_connection_send_command:<GstRtmpConnection@0x7f3e84015cd0> Called from wrong thread

Here is what I have so far: nazar-pc/gst-plugins-bad@1f373afd

Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: gstreamer/gst-plugins-bad#1285